# fast-cam-record-micro-enable

./: README.md  README.txt  fastCamRecord.sln
SetupWizard/Setup/: Setup.vdproj
fastCamRecord/: fastCamRecord.cpp  fastCamRecord.vcxproj  fastCamRecord.vcxproj.filters
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/SDKExamples/CameraLink/ClSer/: CMakeLists.txt  ClSer.cpp  ClSer64.sln  ClSer64.vcproj
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/SDKExamples/Functionality/: All_Examples64.sln  CMakeLists.txt
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/SDKExamples/Functionality/Acquisition_mode/: AcqAPC.cpp  AcqAPC64.vcproj  AcqBlock.cpp  AcqBlock64.vcproj  AcqStandard.cpp  AcqStandard64.vcproj  AcquisitionMode64.sln  CMakeLists.txt
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/SDKExamples/Functionality/Basic_Parametrization/: CMakeLists.txt  Parametrization64.sln  SetGetParameters.cpp  SetGetParameters64.vcproj
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/SDKExamples/Functionality/Configuration_file/: CMakeLists.txt  ConfigFileInit.cpp  ConfigFileInit64.vcproj  ConfigFileLoad.cpp  ConfigFileLoad64.vcproj  ConfigurationFile64.sln
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/SDKExamples/Functionality/Data_Format/: CMakeLists.txt  Formats64.sln  Gray16.cpp  Gray16_64.vcproj  Gray8.cpp  Gray8_64.vcproj  MediumGray.cpp  MediumGray16.cpp  MediumGray16_64.vcproj  MediumGray_64.vcproj  MediumRGB24.cpp  MediumRGB24_64.vcproj  MediumRGB48.cpp  MediumRGB48_64.vcproj  RGB24.cpp  RGB24_64.vcproj
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/SDKExamples/Functionality/Events/: CMakeLists.txt  EventSubsystemAsync.cpp  EventSubsystemSync.cpp
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/SDKExamples/Functionality/Info/: BoardInformation.c  CMakeLists.txt  ImageTag.cpp  ImageTag64.vcproj  Information64.sln  SystemInfo.cpp  TimeStamps.cpp  TimeStamps64.vcproj
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/SDKExamples/Functionality/KneeLut/: CMakeLists.txt  KneeLut64.sln  KneeLutGray.cpp  KneeLutGray64.vcproj  KneeLutGrayFile.cpp  KneeLutGrayFile64.vcproj  KneeLutRGB.cpp  KneeLutRGB64.vcproj  KneeLutRGBFile.cpp  KneeLutRGBFile64.vcproj
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/SDKExamples/Functionality/Memory_management/: AllocMem.cpp  AllocMem64.vcproj  AllocMemEx.cpp  AllocMemEx64.vcproj  AllocUserMem.cpp  AllocUserMem64.vcproj  CMakeLists.txt  MemoryManagement64.sln
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/SDKExamples/Functionality/Operation_mode/: AreaExternal.cpp  AreaExternal64.vcproj  AreaFreeRun.cpp  AreaFreeRun64.vcproj  AreaGrabberControl.cpp  AreaGrabberControl64.vcproj  AreaSoftware.cpp  AreaSoftware64.vcproj  CMakeLists.txt  LineFreeRunImg.cpp  LineFreeRunImg64.vcproj  LineGatedAsyncTriggerLine.cpp  LineGatedAsyncTriggerLine64.vcproj  LineGatedGrabberControlledLine.cpp  LineGatedGrabberControlledLine64.vcproj  LineGrabberControlledLine.cpp  LineGrabberControlledLine64.vcproj  LineStartTriggerImg.cpp  LineStartTriggerImg64.vcproj  LineStartTriggerLine.cpp  LineStartTriggerLine64.vcproj  LineTriggerGatedImg.cpp  LineTriggerGatedImg64.vcproj  LineTriggerGatedMultiBufferImg.cpp  LineTriggerGatedMultiBufferImg64.vcproj  Trigger64.sln
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/SDKExamples/Functionality/SensorReadout/: CMakeLists.txt  SensorReadout.cpp  SensorReadout64.vcproj  SensorReadoutModes64.sln
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/SDKExamples/Gbe/: CMakeLists.txt  GbE64.sln  QuadAreaBayer24.cpp  QuadAreaBayer24_64.vcproj  QuadAreaGray16.cpp  QuadAreaGray16_64.vcproj  QuadAreaGray8.cpp  QuadAreaGray8_64.vcproj  QuadAreaRgb24.cpp  QuadAreaRgb24_64.vcproj  QuadLineGray16.cpp  QuadLineGray16_64.vcproj  QuadLineGray8.cpp  QuadLineGray8_64.vcproj  QuadLineRgb24.cpp  QuadLineRgb24_64.vcproj
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/SDKExamples/Gbe/CameraDetection/: CMakeLists.txt  GbeCameraDetection.cpp  GbeCameraDetection64.sln  GbeCameraDetection64.vcproj
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/SDKExamples/Gbe/GbeFeatures/: CMakeLists.txt  GbeActionCommands.cpp  GbeActionCommands64.vcproj  GbeEvents.cpp  GbeEvents64.vcproj  GbeFeatures64.sln  GbeFeaturesCommon.h  GbeForceIp.cpp  GbeForceIp64.vcproj  GbeInternalGenICam.cpp  GbeInternalGenICam64.vcproj
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/SDKExamples/SimpleExample/: CMakeLists.txt  myFirstSDK.cpp  myFirstSDK64.sln  myFirstSDK64.vcproj
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/SDKExamples/SisoIoLib/: CMakeLists.txt  ImageLoad.c  SisoIoLib_64.sln  SisoIoLib_64.vcproj
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/SDKExamples/include/: board_and_dll_chooser.h
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/cmake/modules/: FindGbeLib.cmake  FindSisoDisplayLib.cmake  FindSisoIoLib.cmake  SisoPlatform.cmake
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/doc/en/: ind_acquisition.html  ind_addondocs.html  ind_hardware.html  ind_intro.html  ind_sdk.html  ind_tools.html  ind_welcome.html  index.html
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/doc/lib/: siso.css
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/drivers/me4/: me4.cat  me4.ctl  me4.inf  me4.sys
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/firmware/mE4AD1-CL/: firmware_mE4AD1-CL_a40-07-92.hap
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/include/: SiSo_LabviewInterface.h  SisoDisplay.h  clser.h  fgrab_define.h  fgrab_prototyp.h  fgrab_struct.h  gbe.h  gbe_error.h  os_funcs.h  os_type.h  sisoboards.h
fastCamRecord/vendors/SiliconSoftware/Runtime5.2.3.1/supp/: Microsoft_VC80_CRT_x86_x64.msi  policy_8_0_Microsoft_VC80_CRT_x86_x64.msi
fastCamRecord/vendors/tiff-4.0.3/libtiff/: libtiff.lib  libtiff_i.exp  libtiff_i.lib  tif_config.h
fastCamRecord/vendors/tiff-4.0.3/port/: libport.lib
fastCamRecord/vendors/tiff-4.0.6/libtiff/: tiffiop.h
fastCamRecord/vendors/tiff-4.0.6/port/: libport.lib
(+312 files in other folders)
