CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(GbE)

#where to find local cmake modules
FILE(TO_CMAKE_PATH "$ENV{SISODIR5}" SISODIR5)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_INSTALL_PREFIX}/cmake/modules" "${SISODIR5}/cmake/modules")

INCLUDE(SisoPlatform)
FIND_PACKAGE(FgLib5 REQUIRED)
FIND_PACKAGE(SisoDisplayLib REQUIRED)
FIND_PACKAGE(GbeLib REQUIRED)

if(COMMAND cmake_policy)
	cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

INCLUDE_DIRECTORIES(
	${FgLib5_INCLUDE_DIR}
	${SISODISPLAYLIB_INCLUDE_DIR}
	${GBELIB_INCLUDE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/../include
)

ADD_EXECUTABLE(QuadAreaGray8
	QuadAreaGray8.cpp)
TARGET_LINK_LIBRARIES(QuadAreaGray8
	${FgLib5_LIBRARIES}
	${SISODISPLAYLIB_LIBRARIES}
	${GBELIB_LIBRARIES}
)
SET_TARGET_PROPERTIES(QuadAreaGray8 PROPERTIES FOLDER "Examples/CameraInterfaces/GbE")

ADD_EXECUTABLE(QuadLineGray8
	QuadLineGray8.cpp)
TARGET_LINK_LIBRARIES(QuadLineGray8
	${FgLib5_LIBRARIES}
	${SISODISPLAYLIB_LIBRARIES}
	${GBELIB_LIBRARIES}
)
SET_TARGET_PROPERTIES(QuadLineGray8 PROPERTIES FOLDER "Examples/CameraInterfaces/GbE")

ADD_EXECUTABLE(QuadLineGray16
	QuadLineGray16.cpp)
TARGET_LINK_LIBRARIES(QuadLineGray16
	${FgLib5_LIBRARIES}
	${SISODISPLAYLIB_LIBRARIES}
	${GBELIB_LIBRARIES}
)
SET_TARGET_PROPERTIES(QuadLineGray16 PROPERTIES FOLDER "Examples/CameraInterfaces/GbE")

ADD_EXECUTABLE(QuadAreaGray16
	QuadAreaGray16.cpp)
TARGET_LINK_LIBRARIES(QuadAreaGray16
	${FgLib5_LIBRARIES}
	${SISODISPLAYLIB_LIBRARIES}
	${GBELIB_LIBRARIES}
)
SET_TARGET_PROPERTIES(QuadAreaGray16 PROPERTIES FOLDER "Examples/CameraInterfaces/GbE")

ADD_EXECUTABLE(QuadAreaRgb24
	QuadAreaRgb24.cpp)
TARGET_LINK_LIBRARIES(QuadAreaRgb24
	${FgLib5_LIBRARIES}
	${SISODISPLAYLIB_LIBRARIES}
	${GBELIB_LIBRARIES}
)
SET_TARGET_PROPERTIES(QuadAreaRgb24 PROPERTIES FOLDER "Examples/CameraInterfaces/GbE")

ADD_EXECUTABLE(QuadLineRgb24
	QuadLineRgb24.cpp)
TARGET_LINK_LIBRARIES(QuadLineRgb24
	${FgLib5_LIBRARIES}
	${SISODISPLAYLIB_LIBRARIES}
	${GBELIB_LIBRARIES}
)
SET_TARGET_PROPERTIES(QuadLineRgb24 PROPERTIES FOLDER "Examples/CameraInterfaces/GbE")

ADD_EXECUTABLE(QuadAreaBayer24
	QuadAreaBayer24.cpp)
TARGET_LINK_LIBRARIES(QuadAreaBayer24
	${FgLib5_LIBRARIES}
	${SISODISPLAYLIB_LIBRARIES}
	${GBELIB_LIBRARIES}
)
SET_TARGET_PROPERTIES(QuadAreaBayer24 PROPERTIES FOLDER "Examples/CameraInterfaces/GbE")

INSTALL(TARGETS
	QuadAreaGray8
	QuadLineGray8
	QuadLineGray16
	QuadAreaGray16
	QuadAreaRgb24
	QuadLineRgb24
	QuadAreaBayer24
	DESTINATION bin/examples)

ADD_SUBDIRECTORY(GbeFeatures)
ADD_SUBDIRECTORY(CameraDetection)
