PROJECT(iolibExamples)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

#where to find local cmake modules
FILE(TO_CMAKE_PATH "$ENV{SISODIR5}" SISODIR5)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_INSTALL_PREFIX}/cmake/modules" "${SISODIR5}/cmake/modules")

INCLUDE(SisoPlatform)
FIND_PACKAGE(SisoIoLib REQUIRED)
FIND_PACKAGE(SisoDisplayLib REQUIRED)

if(COMMAND cmake_policy)
	cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

INCLUDE_DIRECTORIES(
	${SISOIOLIB_INCLUDE_DIR}
	${SISODISPLAYLIB_INCLUDE_DIR}
)

ADD_EXECUTABLE(ImageLoad ImageLoad.c)
TARGET_LINK_LIBRARIES(ImageLoad
	${SISOIOLIB_LIBRARIES}
	${SISODISPLAYLIB_LIBRARIES}
)
SET_TARGET_PROPERTIES(ImageLoad PROPERTIES FOLDER "Examples/iolib")

INSTALL(TARGETS
	ImageLoad
	DESTINATION bin/examples)
