PROJECT(clser)

cmake_minimum_required(VERSION 2.4)
#where to find local cmake modules
FILE(TO_CMAKE_PATH "$ENV{SISODIR5}" SISODIR5)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_INSTALL_PREFIX}/cmake/modules" "${SISODIR5}/cmake/modules")

INCLUDE(SisoPlatform)
FIND_PACKAGE(ClSerSis REQUIRED)
FIND_PACKAGE(FgLib5 REQUIRED)

INCLUDE_DIRECTORIES(
	${FgLib5_INCLUDE_DIR}
	${clsersis_INCLUDE_DIR}
)

ADD_EXECUTABLE(clser
	ClSer.cpp
)

IF (CLALLSERIAL_FOUND)
	SET_TARGET_PROPERTIES(clser PROPERTIES COMPILE_FLAGS "-D USE_CLALLSERIAL")
	TARGET_LINK_LIBRARIES(clser ${CLALLSERIAL_LIBRARY})
ELSE (CLALLSERIAL_FOUND)
	TARGET_LINK_LIBRARIES(clser 
	${clsersis_LIBRARIES}
	${FgLib5_LIBRARIES}
	)
ENDIF (CLALLSERIAL_FOUND)

SET_TARGET_PROPERTIES(clser PROPERTIES FOLDER "Examples/CameraInterfaces/CameraLink/ClSer")

INSTALL(TARGETS clser DESTINATION bin/examples)
