PROJECT(Formats)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

#where to find local cmake modules
FILE(TO_CMAKE_PATH "$ENV{SISODIR5}" SISODIR5)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_INSTALL_PREFIX}/cmake/modules" "${SISODIR5}/cmake/modules")

INCLUDE(SisoPlatform)
FIND_PACKAGE(FgLib5 REQUIRED)
FIND_PACKAGE(SisoDisplayLib REQUIRED)

if(COMMAND cmake_policy)
	cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

INCLUDE_DIRECTORIES(
	${FgLib5_INCLUDE_DIR}
	${SISODISPLAYLIB_INCLUDE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/../../include
)

ADD_EXECUTABLE(Gray16
	Gray16.cpp)
TARGET_LINK_LIBRARIES(Gray16
	${FgLib5_LIBRARIES}
	${SISODISPLAYLIB_LIBRARIES}
)
SET_TARGET_PROPERTIES(Gray16 PROPERTIES FOLDER "Examples/Functionality/Formats")

ADD_EXECUTABLE(Gray8
	Gray8.cpp)
TARGET_LINK_LIBRARIES(Gray8
	${FgLib5_LIBRARIES}
	${SISODISPLAYLIB_LIBRARIES}
)
SET_TARGET_PROPERTIES(Gray8 PROPERTIES FOLDER "Examples/Functionality/Formats")

ADD_EXECUTABLE(MediumGray16
	MediumGray16.cpp)
TARGET_LINK_LIBRARIES(MediumGray16
	${FgLib5_LIBRARIES}
	${SISODISPLAYLIB_LIBRARIES}
)
SET_TARGET_PROPERTIES(MediumGray16 PROPERTIES FOLDER "Examples/Functionality/Formats")

ADD_EXECUTABLE(MediumGray
	MediumGray.cpp)
TARGET_LINK_LIBRARIES(MediumGray
	${FgLib5_LIBRARIES}
	${SISODISPLAYLIB_LIBRARIES}
)
SET_TARGET_PROPERTIES(MediumGray PROPERTIES FOLDER "Examples/Functionality/Formats")

ADD_EXECUTABLE(MediumRGB24
	MediumRGB24.cpp)
TARGET_LINK_LIBRARIES(MediumRGB24
	${FgLib5_LIBRARIES}
	${SISODISPLAYLIB_LIBRARIES}
)
SET_TARGET_PROPERTIES(MediumRGB24 PROPERTIES FOLDER "Examples/Functionality/Formats")

ADD_EXECUTABLE(MediumRGB48
	MediumRGB48.cpp)
TARGET_LINK_LIBRARIES(MediumRGB48
	${FgLib5_LIBRARIES}
	${SISODISPLAYLIB_LIBRARIES}
)
SET_TARGET_PROPERTIES(MediumRGB48 PROPERTIES FOLDER "Examples/Functionality/Formats")

ADD_EXECUTABLE(RGB24
	RGB24.cpp)
TARGET_LINK_LIBRARIES(RGB24
	${FgLib5_LIBRARIES}
	${SISODISPLAYLIB_LIBRARIES}
)
SET_TARGET_PROPERTIES(RGB24 PROPERTIES FOLDER "Examples/Functionality/Formats")

INSTALL(TARGETS
	Gray8
	Gray16
	MediumGray
	MediumGray16
	MediumRGB24
	MediumRGB48
	RGB24
	DESTINATION bin/examples)
