PROJECT(KneeLut)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

#where to find local cmake modules
FILE(TO_CMAKE_PATH "$ENV{SISODIR5}" SISODIR5)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_INSTALL_PREFIX}/cmake/modules" "${SISODIR5}/cmake/modules")

INCLUDE(SisoPlatform)
FIND_PACKAGE(FgLib5 REQUIRED)
FIND_PACKAGE(SisoDisplayLib REQUIRED)

if(COMMAND cmake_policy)
	cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

INCLUDE_DIRECTORIES(
	${FgLib5_INCLUDE_DIR}
	${SISODISPLAYLIB_INCLUDE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/../../include
)

ADD_EXECUTABLE(KneeLutGray
	KneeLutGray.cpp)
TARGET_LINK_LIBRARIES(KneeLutGray
	${FgLib5_LIBRARIES}
	${SISODISPLAYLIB_LIBRARIES}
)
SET_TARGET_PROPERTIES(KneeLutGray PROPERTIES FOLDER "Examples/Functionality/KneeLut")

ADD_EXECUTABLE(KneeLutGrayFile
	KneeLutGrayFile.cpp)
TARGET_LINK_LIBRARIES(KneeLutGrayFile
	${FgLib5_LIBRARIES}
	${SISODISPLAYLIB_LIBRARIES}
)
SET_TARGET_PROPERTIES(KneeLutGrayFile PROPERTIES FOLDER "Examples/Functionality/KneeLut")

ADD_EXECUTABLE(KneeLutRGB
	KneeLutRGB.cpp)
TARGET_LINK_LIBRARIES(KneeLutRGB
	${FgLib5_LIBRARIES}
	${SISODISPLAYLIB_LIBRARIES}
)
SET_TARGET_PROPERTIES(KneeLutRGB PROPERTIES FOLDER "Examples/Functionality/KneeLut")

ADD_EXECUTABLE(KneeLutRGBFile
	KneeLutRGBFile.cpp)
TARGET_LINK_LIBRARIES(KneeLutRGBFile
	${FgLib5_LIBRARIES}
	${SISODISPLAYLIB_LIBRARIES}
)
SET_TARGET_PROPERTIES(KneeLutRGBFile PROPERTIES FOLDER "Examples/Functionality/KneeLut")

INSTALL(TARGETS
	KneeLutGray
	KneeLutGrayFile
	KneeLutRGB
	KneeLutRGBFile
	DESTINATION bin/examples)
