PROJECT(GbeCameraDetection)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

#where to find local cmake modules
FILE(TO_CMAKE_PATH "$ENV{SISODIR5}" SISODIR5)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_INSTALL_PREFIX}/cmake/modules" "${SISODIR5}/cmake/modules")
INCLUDE(SisoPlatform)
FIND_PACKAGE(FgLib5 REQUIRED)
FIND_PACKAGE(SisoDisplayLib REQUIRED)
FIND_PACKAGE(GbeLib REQUIRED)

if(COMMAND cmake_policy)
	cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

INCLUDE_DIRECTORIES(
	${FgLib5_INCLUDE_DIR}
	${SISODISPLAYLIB_INCLUDE_DIR}
	${GBELIB_INCLUDE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/../include
)

ADD_EXECUTABLE(GbeCameraDetection GbeCameraDetection.cpp)
TARGET_LINK_LIBRARIES(GbeCameraDetection ${FgLib5_LIBRARIES} ${GBELIB_LIBRARIES} ${SISODISPLAYLIB_LIBRARIES})
SET_TARGET_PROPERTIES(GbeCameraDetection PROPERTIES FOLDER "Examples/CameraInterfaces/GbE/GbeFeatures")
INSTALL(TARGETS GbeCameraDetection DESTINATION bin/examples)
